--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -15,18 +15,18 @@
    ],
    "source": [
     "def sqrt(x):\n",
-    "    # Initial guess\n",
+    "\n",
     "    z0 = x / 2.0\n",
     "\n",
-    "    # Define the threshold\n",
+    "    # Threshold\n",
     "    threshold = 0.01\n",
     "\n",
-    "    # Iterate until the difference between consecutive guesses is less than the threshold\n",
+    " \n",
     "    while True:\n",
-    "        # Newton's method formula to improve the guess\n",
-    "        z1 = 0.5 * (z0 + x / z0)\n",
+    "        # Newton's formula\n",
+    "        z1 = z0 - (z0 * z0 - x) / (2 * z0)\n",
     "\n",
-    "        # Check if the difference is less than the threshold\n",
+    "       \n",
     "        if abs(z1 - z0) < threshold:\n",
     "            break\n",
     "\n",
@@ -35,11 +35,95 @@
     "\n",
     "    return z1\n",
     "\n",
-    "# Example usage\n",
-    "number = 25.0  # Replace with the desired floating-point number\n",
+    "# Example Test\n",
+    "number = 25.0 \n",
     "result = sqrt(number)\n",
-    "print(f\"The square root of {number} is approximately {result}\")"
+    "print(f\"The square root of {number} is approximately {result}\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chi-squared value: 2.6359100836554257\n",
+      "P-value: 0.10447218120907394\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Observed frequencies\n",
+    "observed = [[57, 45],\n",
+    "            [43, 56]]\n",
+    "\n",
+    "chi2, p, _, _ = stats.chi2_contingency(observed)\n",
+    "\n",
+    "print(f\"Chi-squared value: {chi2}\")\n",
+    "print(f\"P-value: {p}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: nan\n",
+      "P-value: nan\n",
+      "There is no significant difference in body mass between male and female Gentoo penguins.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy.stats import ttest_ind\n",
+    "\n",
+    "# Load the penguins dataset\n",
+    "URL = \"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv\"\n",
+    "# Replace 'path_to_csv' with the actual path to your CSV file\n",
+    "penguins_df = pd.read_csv(URL)\n",
+    "\n",
+    "# Filter data for Gentoo penguins\n",
+    "gentoo_df = penguins_df[penguins_df['species'] == 'Gentoo']\n",
+    "\n",
+    "# Separate data for male and female Gentoo penguins\n",
+    "male_body_mass = gentoo_df[gentoo_df['sex'] == 'male']['body_mass_g']\n",
+    "female_body_mass = gentoo_df[gentoo_df['sex'] == 'female']['body_mass_g']\n",
+    "\n",
+    "# Perform t-test\n",
+    "t_stat, p_value = ttest_ind(male_body_mass, female_body_mass, equal_var=False)\n",
+    "\n",
+    "# Print results\n",
+    "print(f\"T-statistic: {t_stat}\")\n",
+    "print(f\"P-value: {p_value}\")\n",
+    "\n",
+    "# Interpret the results\n",
+    "if p_value < 0.05:\n",
+    "    print(\"There is evidence of a significant difference in body mass between male and female Gentoo penguins.\")\n",
+    "else:\n",
+    "    print(\"There is no significant difference in body mass between male and female Gentoo penguins.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
