--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -76,17 +76,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Task 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: nan\n",
-      "P-value: nan\n",
-      "There is no significant difference in body mass between male and female Gentoo penguins.\n"
+      "T-statistic: 14.761368414543291\n",
+      "P-value: 1.8677596749117468e-28\n",
+      "There is evidence of a significant difference in body mass between male and female Gentoo penguins.\n"
      ]
     }
    ],
@@ -96,15 +103,14 @@
     "\n",
     "# Load the penguins dataset\n",
     "URL = \"https://raw.githubusercontent.com/mwaskom/seaborn-data/master/penguins.csv\"\n",
-    "# Replace 'path_to_csv' with the actual path to your CSV file\n",
     "penguins_df = pd.read_csv(URL)\n",
     "\n",
-    "# Filter data for Gentoo penguins\n",
+    "# Filterfor Gentoo penguins\n",
     "gentoo_df = penguins_df[penguins_df['species'] == 'Gentoo']\n",
     "\n",
-    "# Separate data for male and female Gentoo penguins\n",
-    "male_body_mass = gentoo_df[gentoo_df['sex'] == 'male']['body_mass_g']\n",
-    "female_body_mass = gentoo_df[gentoo_df['sex'] == 'female']['body_mass_g']\n",
+    "# Separation by Gender\n",
+    "male_body_mass = gentoo_df[gentoo_df['sex'] == 'MALE']['body_mass_g']\n",
+    "female_body_mass = gentoo_df[gentoo_df['sex'] == 'FEMALE']['body_mass_g']\n",
     "\n",
     "# Perform t-test\n",
     "t_stat, p_value = ttest_ind(male_body_mass, female_body_mass, equal_var=False)\n",
@@ -119,11 +125,6 @@
     "else:\n",
     "    print(\"There is no significant difference in body mass between male and female Gentoo penguins.\")\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
